--- a/zamboni-vita.org
+++ b/zamboni-vita.org
@@ -247,7 +247,7 @@ This page presents a summary of my qualifications --- please see the following p
 :END:
 
 - As an /Enterprise Architect/, I participate in the design of future products and solutions offered by Swisscom, in collaboration with architects from all other divisions of the company.
-- As /Solution Security Architect for [[https://www.swisscom.ch/en/business/enterprise/offer/cloud-data-center.html][Swisscom's Cloud Platforms]]/ ---which include /Enterprise Service Cloud/, /Enterprise Application Cloud/, /Dynamic Computing Services/, /Enterprise Cloud for SAP Applications/ and related services--- I am responsible for the security and compliance of those services. I  define, prioritize and drive relevant product features and business goals. I also lead the IT Clouds Security Community of Practice and advise engineering teams on compliance, governance and operational activities.
+- As /Solution Security Architect for [[https://www.swisscom.ch/en/business/enterprise/offer/cloud-data-center.html][Swisscom's Cloud Platforms]]/ ---which include /Enterprise Service Cloud/, /Enterprise Application Cloud/, /Dynamic Computing Services/, /Enterprise Cloud for SAP Applications/ and related services--- I am responsible for the security, compliance and data governance of those services. I  define, prioritize and drive relevant product features and business goals. I also lead the IT Clouds Security Community of Practice and advise engineering teams on compliance, governance and operational activities.
 - Selected achievements and activities:
   + Ensure cloud platform and service compliance with internal, contractual and regulatory standards, including ISO27001, ISAE3402/3000 and GDPR.
   + Establish and currently lead a community of around 30 /Security Champions/ from different teams, who drive security initiatives and promote the security culture within the Swisscom IT Clouds organization.
