Eliminated overfull warning in RZ3609 bib entry

--- a/zamboni-pubs.bib
+++ b/zamboni-pubs.bib
@@ -305,9 +305,9 @@
   institution  = {{IBM} Research},
   year         = 2005,
   type         = {Research Report},
-  number       = {RZ3609},
+  number       = {RZ 3609},
   month        = nov,
-  url          = {https://dominoweb.draco.res.ibm.com/d7c39a9a2e73d870852570060051dfed.html},
+  url          = {https://dominoweb.draco.res.ibm.com/reports/rz3609_revised.pdf},
   keywords     = {techreport},
 }
 
