--- a/zamboni-vita.org
+++ b/zamboni-vita.org
@@ -55,20 +55,23 @@
 #+stackoverflow: 5562 zzamboni
 #+homepage: zzamboni.org
 
-#+begin_comment --- How to include private information in the CV ---
+* How to include private information in the CV :noexport:
 
-The "Private info" section contains private information which should not be included in the CV by default. It is kept encrypted automatically thanks to the org-crypt package, whose configuration you can see here: https://github.com/zzamboni/dot-emacs/blob/master/init.org#encryption. The "crypt" tag causes it to be encrypted automatically every time the file is saved, and the "noexport" tag causes it to be omitted when the file gets exported. Its contents, when unencrypted, contains field definitions like this:
+The "Private info" section below contains private information which is not included in the CV by default. It is kept encrypted automatically thanks to the =org-crypt= package. The "crypt" tag causes it to be encrypted automatically every time the file is saved, and the "noexport" tag of the header above causes it to be omitted when the file gets exported. Its contents, when unencrypted, contains field definitions like this:
 
+#+begin_src org
 ,#+mobile: <my mobile number>
 ,#+address: <my address>
 ,#+extrainfo: <other private information>
+#+end_src
 
 When encrypted, this information is simply ignored. When I want to produce a version of my CV which includes this information, I run ~M-x org-decrypt-entry~, which prompts for my GPG passphrase. Then, *without saving the file*, I run the following export command:
 
+#+begin_src emacs-lisp
 (org-export-to-file 'awesomecv "zamboni-vita-private.tex")
+#+end_src
 
-#+end_comment
-* Private info :noexport:crypt:
+** Private info :crypt:
 -----BEGIN PGP MESSAGE-----
 Comment: GPGTools - http://gpgtools.org
 
