--- a/README.org
+++ b/README.org
@@ -1,13 +1,13 @@
 #+title: Curriculum Vitae with Org-mode
 #+author: Diego Zamboni
 
-This repository contains the source for my CV. The document is maintained in org-mode. The main export format is to LaTeX and PDF. You can find the end result here: https://zzamboni.org/vita/
+This repository contains the source for my CV. The document is maintained in org-mode. The main export format is to LaTeX and PDF. You can find the rendered document [[https://zzamboni.org/vita/][in my website]].
 
 My goal is to produce the CV from an Org file which focuses on the semantics of the CV, without worrying about the format. Ultimately, the CV should be exportable to multiple formats from the same document.
 
-The export to LaTeX is done using the [[https://github.com/posquit0/Awesome-CV][Awesome-CV]] LaTeX class and the [[https://gitlab.com/Titan-C/org-cv/merge_requests/3][ox-awesomecv]] exporter I wrote as part of the [[https://titan-c.gitlab.io/org-cv/][Org-CV]] package. The Awesome-CV exporter is not yet merged into Org-CV, but for now you can get it from the merge request at https://gitlab.com/Titan-C/org-cv/merge_requests/3.
+The export to LaTeX is done using the [[https://github.com/posquit0/Awesome-CV][AwesomeCV]] LaTeX class (with some of my own modifications, which you can find in this directory) and the [[https://titan-c.gitlab.io/org-cv/#using-awesomecv][ox-awesomecv]] exporter I contributed to the [[https://titan-c.gitlab.io/org-cv/][Org-CV]] package.
 
-Exporting to HTML using the base ox-html exporter works fairly well, but the output is not optimally formatted. The main issue is that a lot of the semantic information (e.g. job dates, employers, etc.) are specified in property drawers, and ox-html does not know how to extract/format them. As a workaround, I have configured that those properties should be exported using the =prop= option. This is less than ideal because the properties are exported as-they-are, without any special formatting. You can find an example export in [[https://zzamboni.org/files/vita/zamboni-vita.html][zamboni-vita.html]].
+Exporting to HTML using the standard =ox-html= exporter works fairly well, but the output is not optimally formatted. The main issue is that a lot of the semantic information (e.g. job dates, employers, etc.) are specified in property drawers, and =ox-html= does not know how to extract/format them. As a workaround, I have configured that those properties should be exported using the =prop= option. This is less than ideal because the properties are exported as-they-are, without any special formatting. You can find an example export in [[https://zzamboni.org/files/vita/zamboni-vita.html][zamboni-vita.html]].
 
 Exporting to ASCII uses the same trick as for HTML, but the result looks quite reasonable. I use the Plain Text UTF-8 exporter. You can see the output in [[https://zzamboni.org/files/vita/zamboni-vita.txt][zamboni-vita.txt]].
 
@@ -17,36 +17,47 @@ Read the rest of this document for some more details, if you would like to use i
 - [[#org-mode-configuration][org-mode configuration]]
 - [[#latex-configuration][LaTeX configuration]]
 - [[#document-structure][Document structure]]
-- [[#detailed-ox-awesomecv-documentation][Detailed ox-awesomecv documentation]]
 - [[#next-steps-and-missing-stuff][Next steps and missing stuff]]
 
 * org-mode configuration
 
-Org-CV is not available in MELPA yet, so I clone the git repository under =~/.emacs.d/lisp/org-cv=, and then use the following code to load the modules:
+Org-CV is not available in MELPA yet, so I it must be installed from its [[https://gitlab.com/Titan-C/org-cv][gitlab repository]]. I use Doom Emacs, so I install it using the =package!= command in the =packages.el= file:
+
+#+begin_src emacs-lisp
+(package! org-cv
+  :recipe (:host gitlab
+           :repo "Titan-C/org-cv"))
+#+end_src
+
+Once installed, I load it using the =use-package!= command:
+
+#+begin_src emacs-lisp
+(use-package! ox-awesomecv
+  :after org)
+#+end_src
+
+If you don't use Doom Emacs, you can clone the git repository under =~/.emacs.d/lisp/org-cv=, and then use the following code to load the modules:
 
   #+begin_src emacs-lisp
-    (use-package ox-awesomecv
-      :load-path "~/.emacs.d/lisp/org-cv"
-      :init (require 'ox-awesomecv))
-    (use-package ox-hugocv
-      :load-path "~/.emacs.d/lisp/org-cv"
-      :init (require 'ox-hugocv))
+(use-package ox-awesomecv
+  :load-path "~/.emacs.d/lisp/org-cv"
+  :init (require 'ox-awesomecv))
   #+end_src
 
 * LaTeX configuration
 
-You need a functional TeX/LaTeX install. I recommend using the [[https://www.tug.org/texlive/][TeXLive distribution]], which contains all the base packages and binaries. Use the version corresponding to your OS.
+You need a functional LaTeX install. AwesomeCV requires the use of XeTeX or LuaTeX. I currently use [[https://tectonic-typesetting.github.io/en-US/][Tectonic]], but you can also use the [[https://www.tug.org/texlive/][TeXLive distribution]], which contains all the base packages and binaries, or [[https://yihui.org/tinytex/][TinyTeX]], which allows you only install the packages you need.
 
-This repository contains a slightly-customized version of the Awesome-CV package. The LaTeX files are in the =texinput= directory, so you need to add it to the =$TEXINPUT= environment variable for the compile to work. I use =latexmk= (included in the TeXLive distribution) to handle the document compilation, you can see its configuration file in [[./.latexmkrc][.latexmkrc]]. I have also put together a simple [[./Makefile][Makefile]] to run =latexmk= with different useful options, and to automate publishing the latest version of my CV to [[https://zzamboni.org/vita/][my website]].
+This repository contains a slightly customized version of the Awesome-CV package. The LaTeX files are in the =texinput= directory, so you need to add it to the =$TEXINPUT= environment variable for the compile to work (Tectonic does not support =TEXINPUT=, so they are also symlinked into the main directory so they can be found). Tectonic itself takes care of all the compilation phases, but you can also use =latexmk= (included in the TeXLive distribution) to handle the document compilation, you can see its configuration file in [[./.latexmkrc][.latexmkrc]]. I have also put together a simple [[./Makefile][Makefile]] to compile the document, and to automate publishing the latest version of my CV to [[https://zzamboni.org/vita/][my website]].
 
 * Document structure
 
 Some things you may find useful:
 
-- By Org-CV convention, the title of the org-document (as specified by =#+title:=) is used for the "desired job/position", since your name is specified using the =#+author:= document property.
-- You can specify many other properties (e.g. mobile phone, twitter profile, email address, home page URL, etc.) using other document properties. Some are supported by all Org-CV modules, others only by the AwesomeCV exporter, see the [[https://titan-c.gitlab.io/org-cv/][Org-CV]] documentation for the general properties, and the [[#awesomecv-doc][the documentation below]] for the ox-awesomecv details.
-- At the top of the Org document there is a block starting with =#+begin cv_config=. This block contains all the global document properties to specify AwesomeCV, org-mode and LaTeX configuration properties. The block is optional, I use it only so I can easily collapse the whole block when I don't need it.
-- The "Private info" section contains private information which should not be included in the CV by default. It is kept encrypted, so that even if the source file is publicly visible (like mine), the private information is kept protected. The encryption is done automatically thanks to the =org-crypt= package, whose configuration you can see here: https://github.com/zzamboni/dot-emacs/blob/master/init.org#encryption. The =crypt= tag in the "Private info" section causes it to be encrypted automatically every time the file is saved, and the =noexport= tag causes it to be omitted when the file gets exported. Its contents, when unencrypted, contains field definitions like this:
+- By Org-CV convention, the title of the org-document (as specified by =#+title=) is used for the "desired job/position", since your name is specified using the =#+author= document property.
+- You can specify many other properties (e.g. mobile phone, twitter profile, email address, home page URL, etc.) using other document properties. Some are supported by all Org-CV modules, others only by the AwesomeCV exporter, see the [[https://titan-c.gitlab.io/org-cv/][Org-CV]] documentation for the general properties, and the [[https://titan-c.gitlab.io/org-cv/#using-awesomecv][AwesomeCV section]] for the =ox-awesomecv= specifics.
+- At the top of the Org document there is a block starting with =:CV_CONFIG:=. This block contains all the global document properties to specify AwesomeCV, org-mode and LaTeX configuration properties. The block is optional, I use it only so I can easily collapse the whole block in Emacs when I don't need it.
+- The "Private info" section contains private information which should not be included in the CV by default. It is kept encrypted, so that even if the source file is publicly visible (like mine), the private information is kept protected. The encryption is done automatically thanks to the =org-crypt= Emacs package. The =crypt= tag in the "Private info" section causes it to be encrypted automatically every time the file is saved, and the =noexport= tag in its enclosing section causes it to be omitted when the file gets exported. Its contents, when unencrypted, contains field definitions like this:
   #+begin_example
     ,#+mobile: <my mobile number>
     ,#+address: <my address>
@@ -70,103 +81,9 @@ Some things you may find useful:
     # End:
   #+end_src
 
-* Detailed ox-awesomecv documentation
-:PROPERTIES:
-:CUSTOM_ID: awesomecv-doc
-:END:
-
-(this is extracted from the org-cv documentation about the AwesomeCV exporter)
-
-[[https://github.com/posquit0/Awesome-CV][AwesomeCV]] is another LaTeX template for producing nice-looking CVs. In addition to the regular document attributes, the following are supported:
-
-#+attr_html: :class table table-striped
-| Field           | Description                                               |
-|-----------------+-----------------------------------------------------------|
-| PHOTOSTYLE      | Style of photo to use. Comma-separated values can include |
-|                 | circle/rectangle,edge/noedge,left/right.                  |
-| CVCOLOR         | Color of highlights.                                      |
-| STACKOVERFLOW   | Stack overflow, must be specified as =ID username=          |
-| FONTDIR         | Directory where the fonts can be found, defaults          |
-|                 | to =fonts/= (as in the standard AwesomeCV)                  |
-| CVHIGHLIGHTS    | Whether to colorize highlights. Defaults to true          |
-| QUOTE           | Optional quote to include at the top of the CV            |
-| FIRSTNAME       | First name to be shown in the CV. By default the first    |
-|                 | space-separated part of AUTHOR is used.                   |
-| LASTNAME        | Last name to be shown in the CV.  By default the second   |
-|                 | space-separated part of AUTHOR is used.                   |
-| CVFOOTER_LEFT   | Text to include in the left footer. None by default       |
-| CVFOOTER_MIDDLE | Text to include in the middle footer. None by default.    |
-| CVFOOTER_RIGHT  | Text to include in the right footer. None by default.     |
-
-AwesomeCV supports a few additional types of environment types in =CV_ENV=, including =cvemployer=, =cvskills=, =cvhonors= and =cvschool=. Some of these support additional property fields:
-
-#+attr_html: :class table table-striped
-| Field     | Description                                                      |
-|-----------+------------------------------------------------------------------|
-| FROM      | Start date of the entry                                          |
-| TO        | End date of the entry                                            |
-| DATE      | Shortcut to specify both =FROM= and =TO= as the same date.           |
-|           | Both =FROM= and =TO= override =DATE=.                                  |
-| EMPLOYER  | Employer or organization, can also be specified                  |
-|           | as =ORGANIZATION=, =SCHOOL=, =EVENT= or =POSITION= (different            |
-|           | names make more sense depending on the type of environment)      |
-| LABEL     | In =cvsubentry= environments, adds the given text to the left      |
-|           | of the date range, can be used to add additional information     |
-|           | to the entry.                                                    |
-| RIGHT_IMG | path to an image to include floating to the right of a =cventry=,  |
-|           | a =cvsubentry= or =cvschool= entry. Meant to be used to show a logo. |
-
-All the supported values of =CV_ENV= are described below.
-
-** =cventries=
-
-Enclose all the subheaders in a =cventries= environment. Subheaders can
-be of type =cventry=, =cvschool=, or =cvemployer=.
-
-** =cvhonors=
-
-Enclose all the subheaders in a =cvhonors= environment. Subheaders must
-be of type =cvhonor=
-
-** =cventry=
-
-Converts to a =\cventry= command. Supports attributes =FROM=, =TO=, =DATE=,
-=EMPLOYER=, =LOCATION=, =RIGHT_IMG=.
-
-** =cvsubentry=
-
-Converts to a =\cvsubentry= command. Supports attributes =FROM=, =TO=, =DATE=,
-=LABEL= =RIGHT_IMG=.
-
-** =cvemployer=
-
-Converts to a =\cventry= with only the title line. Supports attributes
-=FROM=, =TO=, =DATE= and =LOCATION=.
-
-** =cvschool=
-
-Converts to a =\cventry=. The headline should contain the degree
-obtained, shown as the main title. Supports attributes =LOCATION=,
-=SCHOOL=, =FROM=, =TO=, =DATE= and =RIGHT_IMG=.
-
-** =cvhonor=
-
-Converts to a =\cvhonor= command (must be inside a =cvhonors=
-headline). Supports attributes =LOCATION=, =EMPLOYER= (in this case =EVENT=
-or =POSITION= might be more semantically accurate, and can also be
-used), =FROM=, =TO=, =DATE=.
-
-** =cvskills=
-
-Converts to a =\cvskills= environment. The headline must contain a
-[[https://orgmode.org/manual/Plain-lists.html][description list]], which gets converted into a sequence of =\cvskill=
-commands, with the term as the skill title and the description as its
-contents.
-
 * Next steps and missing stuff
 
 - I would like to improve Org-CV's ox-hugocv to support the additional properties introduced by ox-awesomecv, so that the Hugo Markdown export looks good and can be used instead of ox-html. This would allow me to publish an HTML version of my CV in my website.
 - Add integration of Org-CV's exporters into the org-mode Export menu.
-- It would be nice to automate somehow the export of a CV with the private information unencrypted.
 - I'm torn about the use of fully-semantic properties for specifying information in the CV. On one hand, it's the cleanest and easiest way of doing it. On the other hand, it makes it harder to use the default org-mode exporters while still preserving the information in the output.
 - I wonder if it would make more sense to specify =CV_ENV= as a tag in the headline.
